--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/suggestion-select.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/suggestion-select.tmpl
@@ -4,6 +4,7 @@
 <!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
 <h1>Suggestions</h1>
+<div id="acqui_suggestion_select">
 	<form action="/cgi-bin/koha/acqui/suggestion-select.pl" method="get">
 	<table>
 		<tr>
@@ -60,4 +61,5 @@
 		<!-- /TMPL_LOOP -->
 	</table>
 	</form>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
