--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/acqui-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/acqui-home.tmpl
@@ -3,25 +3,26 @@
 <!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
 <h1>Acquisitions</h1>
+<div id="acqui_acqui_home_order">
 	<!-- TMPL_IF name="nobudget" -->
 		You must define a budget in parameters
 	<!-- TMPL_ELSE -->
-<form action="/cgi-bin/koha/acqui/order.pl" method="post">
-	<h2>Start, Recieve, or Modify Any Order</h2>
-	<p><label for="supplier">Supplier ID or Name</label><input type="text" size="25" name="supplier" id="supplier" /></p>
-	<input type="submit" value="Search" />
-</form>
-	<form action="histsearch.pl" method="get">
-		<input type="submit" value="Search Order History" />
-	</form>
+		<form action="/cgi-bin/koha/acqui/order.pl" method="post">
+			<h2>Start, Recieve, or Modify Any Order</h2>
+			<p><label for="supplier">Supplier ID or Name</label><input type="text" size="25" name="supplier" id="supplier" /></p>
+			<input type="submit" value="Search" />
+		</form>
+		<form action="histsearch.pl" method="get">
+			<input type="submit" value="Search Order History" />
+		</form>
+	<!-- /TMPL_IF -->
+</div>
 
-<!-- /TMPL_IF -->
 
-<!-- currencies-->
-
+<div id="acqui_acqui_home_currency">
 <!-- TMPL_IF NAME="loop_currency" -->
-	<form action="/cgi-bin/koha/currency.pl">
 	<h2>Exchange Rates</h2>
+	<form action="/cgi-bin/koha/currency.pl">
 	<table>
 		<tr>
 			<th>Currency</th>
@@ -46,57 +47,57 @@
 	<input type="hidden" name="op" value="add_form" /><input type="submit" value="Add Currency" />
 	</form>
 <!-- /TMPL_IF -->
+</div>
 
-
-<!-- suggestions -->
-
+<div id="acqui_acqui_home_suggestions">
 	<h2>Pending Suggestions</h2>
 		<!-- TMPL_IF name="suggestion" -->
 			<!--TMPL_VAR NAME="suggestion" --> suggestions waiting <a href="/cgi-bin/koha/suggestion/acceptorreject.pl">Manage Suggestions</a>
 		<!-- TMPL_ELSE -->
 			<p>No suggestions waiting</p>
 		<!-- /TMPL_IF -->
+</div>
 
-
-<!-- showbudget-->
-	
-		<!-- TMPL_IF name="nobudget" -->
+<div id="acqui_acqui_home_budgets">
+	<!-- TMPL_IF name="nobudget" -->
 		<p>You must define a budget in parameters</p>
 	<!-- TMPL_ELSE -->
 	<h2>Budgets and Bookfunds</h2>
 	<table>
+		<tr>
+			<th>Budgets</th>
+			<th>Total</th>
+			<th>Spent</th>
+			<th>Comtd</th>
+			<th>Avail</th>
+		</tr>
+		<!-- TMPL_LOOP name="loop_budget" -->
 			<tr>
-				<th>Budgets</th>
-				<th>Total</th>
-				<th>Spent</th>
-				<th>Comtd</th>
-				<th>Avail</th>
+				<td><!-- TMPL_VAR name="bookfundname" --></td>
+				<td><!-- TMPL_VAR name="budgetamount" --></td>
+				<td><!-- TMPL_VAR name="spent" --></td>
+				<td><!-- TMPL_VAR name="comtd" --></td>
+				<td><!-- TMPL_VAR name="avail" --></td>
 			</tr>
-			<!-- TMPL_LOOP name="loop_budget" -->
-				<tr>
-					<td><!-- TMPL_VAR name="bookfundname" --></td>
-					<td><!-- TMPL_VAR name="budgetamount" --></td>
-					<td><!-- TMPL_VAR name="spent" --></td>
-					<td><!-- TMPL_VAR name="comtd" --></td>
-					<td><!-- TMPL_VAR name="avail" --></td>
-				</tr>
-			<!-- /TMPL_LOOP -->
-			<tr>
- 				<td>Total</td>
-				<td><!-- TMPL_VAR name="total" --></td>
-				<td><!-- TMPL_VAR name="totspent" --></td>
-				<td><!-- TMPL_VAR name="totcomtd" --></td>
-				<td><!-- TMPL_VAR name="totavail" --></td>
-			</tr>
-		</table><!-- /TMPL_IF -->
-
-<p>Use your reload button [ctrl + r] to get the most recent figures.
-Committed figures are approximate only, as exchange rates will affect the amount actually paid.</p>
-
-<h2>Help</h2>
-<p>To start an acquisition, whether an order, local purchase or donation first search on the supplier, you will be asked to check their details, and enter your name which  will set up a "shopping basket" for you. (Why is this you might ask... well because we want to know that it's really you ordering things - not just your computer).</p>
-<p>To order an item you need to establish whether a biblio already exists for it, and either add an item, or set up a new biblio then add the item.  </p>
-<p>To start a new shopping basket with a new supplier return to this page and just start a new supplier search.</p>
-<p>To close off a shopping basket click on "view shopping baskets" or search above, and the click on "confirm basket".</p>
+		<!-- /TMPL_LOOP -->
+		<tr>
+			<td>Total</td>
+			<td><!-- TMPL_VAR name="total" --></td>
+			<td><!-- TMPL_VAR name="totspent" --></td>
+			<td><!-- TMPL_VAR name="totcomtd" --></td>
+			<td><!-- TMPL_VAR name="totavail" --></td>
+		</tr>
+	</table><!-- /TMPL_IF -->
+</div>
+<div id="acqui_acqui_home_hints">
+	<p>Use your reload button [ctrl + r] to get the most recent figures.
+	Committed figures are approximate only, as exchange rates will affect the amount actually paid.</p>
+	
+	<h2>Help</h2>
+	<p>To start an acquisition, whether an order, local purchase or donation first search on the supplier, you will be asked to check their details, and enter your name which  will set up a "shopping basket" for you. (Why is this you might ask... well because we want to know that it's really you ordering things - not just your computer).</p>
+	<p>To order an item you need to establish whether a biblio already exists for it, and either add an item, or set up a new biblio then add the item.  </p>
+	<p>To start a new shopping basket with a new supplier return to this page and just start a new supplier search.</p>
+	<p>To close off a shopping basket click on "view shopping baskets" or search above, and the click on "confirm basket".</p>
+</div>
 
 <!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
