--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/basket.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/basket.tmpl
@@ -3,30 +3,28 @@
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
-	<h1><!-- TMPL_UNLESS name="basketno" -->New <!-- /TMPL_UNLESS -->Shopping Basket <!-- TMPL_VAR NAME="basketno" --> for <a href="supplier.pl?id=<!-- TMPL_VAR NAME="booksellerid" -->"><!-- TMPL_VAR NAME="name" --></a></h1><br />
-	<!-- TMPL_UNLESS name="closedate" -->
-		
-			<h2>Basket Details</h2>
-			<table>
-			<tr><th>Basket Number:</th><td><!-- TMPL_VAR NAME="basketno" --></td></tr>
-			<tr><th>Managed By:</th><td><!-- TMPL_VAR NAME="authorisedbyname" --></td></tr>
-			<tr><th>Open On:</th><td><!-- TMPL_VAR NAME="creationdate" --></td></tr>
-			<tr><th>For:</th><td>Supplier Id <!-- TMPL_VAR NAME="booksellerid" --></td></tr>
-			<tr><th>Invoice Number:</th><td><!-- TMPL_VAR NAME="booksellerinvoicenumber" --></td></tr>
-			<!-- TMPL_IF name="closedate" --><tr><th>Closed On:</th><td> <!-- TMPL_VAR name="closedate" --></td></tr><!-- /TMPL_IF -->
-			</table>
-			<!-- TMPL_UNLESS name="closedate" -->
-			<form action="/cgi-bin/koha/acqui/order.pl" method="get">
-				<input type="hidden" name="op" value="close" />
-				<input type="hidden" name="basket" value="<!-- TMPL_VAR NAME="basketno" -->" />
-				<input type="hidden" name="supplier" value="<!-- TMPL_VAR name="booksellerid" -->" />
-				<input type="submit" value="Close this Basket" />
-			</form>
-			<!-- /TMPL_UNLESS -->
-		
-	<!-- /TMPL_UNLESS -->
+	<h1><!-- TMPL_UNLESS name="basketno" -->New <!-- /TMPL_UNLESS -->Shopping Basket <!-- TMPL_VAR NAME="basketno" --> for <a href="supplier.pl?id=<!-- TMPL_VAR NAME="booksellerid" -->"><!-- TMPL_VAR NAME="name" --></a></h1>
+	<div id="acqui_basket_summary">
+		<h2>Basket Details</h2>
+		<table>
+		<tr><th>Basket Number:</th><td><!-- TMPL_VAR NAME="basketno" --></td></tr>
+		<tr><th>Managed By:</th><td><!-- TMPL_VAR NAME="authorisedbyname" --></td></tr>
+		<tr><th>Open On:</th><td><!-- TMPL_VAR NAME="creationdate" --></td></tr>
+		<tr><th>For:</th><td>Supplier Id <!-- TMPL_VAR NAME="booksellerid" --></td></tr>
+		<tr><th>Invoice Number:</th><td><!-- TMPL_VAR NAME="booksellerinvoicenumber" --></td></tr>
+		<!-- TMPL_IF name="closedate" --><tr><th>Closed On:</th><td> <!-- TMPL_VAR name="closedate" --></td></tr><!-- /TMPL_IF -->
+		</table>
+		<!-- TMPL_UNLESS name="closedate" -->
+		<form action="/cgi-bin/koha/acqui/order.pl" method="get">
+			<input type="hidden" name="op" value="close" />
+			<input type="hidden" name="basket" value="<!-- TMPL_VAR NAME="basketno" -->" />
+			<input type="hidden" name="supplier" value="<!-- TMPL_VAR name="booksellerid" -->" />
+			<input type="submit" value="Close this Basket" />
+		</form>
+		<!-- /TMPL_UNLESS -->
+	</div>
 	
-	
+	<div id="acqui_basket_content">
 	<h2>Order Details</h2>
 	<!-- TMPL_IF name="books_loop" -->
 		<table>
@@ -120,7 +118,8 @@
 	<!-- /TMPL_IF -->
 	
 	<!-- TMPL_UNLESS name="closedate" -->
-	
+	</div>
+	<div id="acqui_basket_add">
 		<h2>Add To Order</h2>
 		<form action="/cgi-bin/koha/acqui/newbasket2.pl" method="post">
 			<input type="hidden" name="booksellerid" value="<!-- TMPL_VAR NAME="booksellerid" -->" />
@@ -131,8 +130,7 @@
 			<li><a href="/cgi-bin/koha/acqui/newbiblio.pl?booksellerid=<!-- TMPL_VAR NAME="booksellerid" -->&amp;basketno=<!-- TMPL_VAR NAME="basketno" -->">New Record</a></li>
 			</ul>
 		</form>
-	
+	</div>
 	<!-- /TMPL_UNLESS -->
-
 
 <!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
