--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/order.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/order.tmpl
@@ -3,63 +3,70 @@
 <!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
 <h1>You searched on <b>supplier <!-- TMPL_VAR name="supplier" -->,</b> <!-- TMPL_VAR name="count" --> results found</h1>
-<table>
-<tr>
-	<th>Order</th>
-	<th>Receive</th>
-	<th>Company</th>
-	<th>&nbsp;</th>
-</tr>
-
-<!-- TMPL_LOOP name="loop_suppliers" -->
+<div id="acqui_order_supplierlist">
+	<table>
 	<tr>
-		<td>
-			<!-- TMPL_IF name="active" -->
-				<a href="basket.pl?supplierid=<!-- TMPL_VAR name=supplierid -->">Add order</a>
-			<!-- TMPL_ELSE -->
-				Inactive
-			<!-- /TMPL_IF -->
-		</td>
-		<td>
-			<a href="recieveorder.pl?supplierid=<!-- TMPL_VAR name=supplierid -->">Recieve order</a>
-		</td>
-		<td><a href="supplier.pl?supplierid=<!-- TMPL_VAR name=supplierid -->"><!-- TMPL_VAR name="name" --></a></td>
-		<td>
-			<table>
-					<tr>
-						<th>Basket</th>
-						<th>Items</th>
-						<th>Created by</th>
-						<th>Date</th>
-						<th>&nbsp;</th>
-					</tr>
-					<!-- TMPL_LOOP NAME="loop_basket" -->
+		<th>Order</th>
+		<th>Receive</th>
+		<th>Company</th>
+		<th>&nbsp;</th>
+	</tr>
+	
+	<!-- TMPL_LOOP name="loop_suppliers" -->
+		<tr>
+			<td>
+				<!-- TMPL_IF name="active" -->
+					<a href="basket.pl?supplierid=<!-- TMPL_VAR name=supplierid -->">Add order</a>
+				<!-- TMPL_ELSE -->
+					Inactive
+				<!-- /TMPL_IF -->
+			</td>
+			<td>
+				<a href="recieveorder.pl?supplierid=<!-- TMPL_VAR name=supplierid -->">Recieve order</a>
+			</td>
+			<td><a href="supplier.pl?supplierid=<!-- TMPL_VAR name=supplierid -->"><!-- TMPL_VAR name="name" --></a></td>
+			<td>
+				<table>
 						<tr>
-							<td><!-- TMPL_VAR NAME="basketno" --></td>
-							<td><TMPL_VAR NAME="total"></td>
-							<td>
-								<!-- TMPL_VAR name="firstname" -->
-									<!-- TMPL_VAR name="surname" -->
-							</td>
-							<td><!-- TMPL_VAR NAME="creationdate" --></td>
-							<td>
-								<!-- TMPL_IF name="closedate" -->
-									closed on <!-- TMPL_VAR NAME="closedate" -->
-									<a href="/cgi-bin/koha/acqui/basket.pl?basket=<!-- TMPL_VAR NAME="basketno" -->" class="button acquisition">View</a>
-								<!-- TMPL_ELSE -->
-									<!-- TMPL_IF name="active" -->
-										<a href="/cgi-bin/koha/acqui/basket.pl?basket=<!-- TMPL_VAR NAME="basketno" -->" class="button acquisition">modify</a>
-									<!-- TMPL_ELSE -->
-										<a href="/cgi-bin/koha/acqui/basket.pl?basket=<!-- TMPL_VAR NAME="basketno" -->" class="button acquisition">View</a>
-									<!-- /TMPL_IF -->
-								<!-- /TMPL_IF -->
-							</td>
+							<th>Basket</th>
+							<th>Items</th>
+							<th>Created by</th>
+							<th>Date</th>
+							<th>&nbsp;</th>
 						</tr>
-					<!-- /TMPL_LOOP -->
-				</table>
-		</td>
-		</tr>
-	<!-- /TMPL_LOOP -->
-	</table>
-<p><a href="supplier.pl?supplierid=0">Add supplier</a></p>
+						<!-- TMPL_LOOP NAME="loop_basket" -->
+							<tr>
+								<td><!-- TMPL_VAR NAME="basketno" --></td>
+								<td><TMPL_VAR NAME="total"></td>
+								<td>
+									<!-- TMPL_VAR name="firstname" -->
+										<!-- TMPL_VAR name="surname" -->
+								</td>
+								<td><!-- TMPL_VAR NAME="creationdate" --></td>
+								<td>
+									<!-- TMPL_IF name="closedate" -->
+										closed on <!-- TMPL_VAR NAME="closedate" -->
+										<a href="/cgi-bin/koha/acqui/basket.pl?basket=<!-- TMPL_VAR NAME="basketno" -->" class="button acquisition">View</a>
+									<!-- TMPL_ELSE -->
+										<!-- TMPL_IF name="active" -->
+											<a href="/cgi-bin/koha/acqui/basket.pl?basket=<!-- TMPL_VAR NAME="basketno" -->" class="button acquisition">modify</a>
+										<!-- TMPL_ELSE -->
+											<a href="/cgi-bin/koha/acqui/basket.pl?basket=<!-- TMPL_VAR NAME="basketno" -->" class="button acquisition">View</a>
+										<!-- /TMPL_IF -->
+									<!-- /TMPL_IF -->
+								</td>
+							</tr>
+						<!-- /TMPL_LOOP -->
+					</table>
+			</td>
+			</tr>
+		<!-- /TMPL_LOOP -->
+		</table>
+</div>
+<div id="acqui_order_add_supplier">
+	<form action="supplier.pl">
+		<input type="hidden" name="supplierid" value="0" />
+		<input type="submit" value="Add supplier" />
+	</form>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
