just adding menus to the top

--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/admin-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/admin-home.tmpl
@@ -1,6 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- System Administration<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
-
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
 
 <h1>Koha Administration</h1>
 
