--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/aqbookfund.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/aqbookfund.tmpl
@@ -1,4 +1,9 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- System Administration: <!-- TMPL_IF name="else" -->Book Funds<!-- /TMPL_IF -->
+
+
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <!-- TMPL_IF name="add_form" --><!-- TMPL_VAR name="header" --><!-- /TMPL_IF -->
 <!-- TMPL_IF name="add_validate" -->Data Recorded<!-- /TMPL_IF -->
 <!-- TMPL_IF name="delete_confirm" -->Confirm Deletion of Fund '<!-- TMPL_VAR name="bookfundname" -->'<!-- /TMPL_IF -->
