--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/aqbudget.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/aqbudget.tmpl
@@ -1,4 +1,8 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- System Administration: <!-- TMPL_IF name="else" -->Budget admin<!-- /TMPL_IF -->
+
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <!-- TMPL_IF name="add_form" --><!-- TMPL_VAR NAME="header" --><!-- /TMPL_IF -->
 <!-- TMPL_IF name="add_validate" -->Budget Data Recorded<!-- /TMPL_IF -->
 <!-- TMPL_IF name="delete_confirm" -->Delete Book Fund '<!-- TMPL_VAR NAME="bookfundid" -->'<!-- /TMPL_IF -->
