--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/auth_subfields_structure.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/auth_subfields_structure.tmpl
@@ -1,6 +1,8 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- System Administration<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
 
 <!-- TMPL_IF NAME="add_form" -->
 	<h1>
