--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/auth_tag_structure.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/auth_tag_structure.tmpl
@@ -1,6 +1,8 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- System Administration<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
 
 <h1>Authority MARC framework for <!-- TMPL_IF NAME="authtypecode" --><!-- TMPL_VAR NAME="authtypecode" --><!-- TMPL_ELSE -->default framework<!-- /TMPL_IF --></h1>
 <script language="javascript" type="text/javascript">
