--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/issuingrules.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/issuingrules.tmpl
@@ -1,5 +1,8 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- System Administration: Issuing Rules<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 	<h1>Defining <!-- TMPL_IF NAME="branch" -->issuing rules for <!-- TMPL_VAR NAME="branch" --><!-- TMPL_ELSE -->default issuing rules<!-- /TMPL_IF --></h1>
 	<div class="help">
 		<h3>HINT for issues</h3>
