--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/itemtypes.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/itemtypes.tmpl
@@ -5,6 +5,9 @@
 <!-- TMPL_IF name="else" -->Item Types Administration<!-- /TMPL_IF -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <!-- TMPL_IF name="add_form" -->
 
 	<form action="<!-- TMPL_VAR name="script_name" -->" name="Aform" method="post">
