--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/marctagstructure.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/marctagstructure.tmpl
@@ -5,6 +5,9 @@
 <!-- TMPL_IF name="else" -->MARC tag Structure<!-- /TMPL_IF -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <h1>MARC tag structure admin for <!-- TMPL_IF NAME="frameworkcode" --><!-- TMPL_VAR NAME="frameworktext" --> (<!-- TMPL_VAR NAME="frameworkcode" -->)<!-- TMPL_ELSE -->default MARC framework<!-- /TMPL_IF --></h1>
 <script language="javascript" type="text/javascript">
 	function _(s) { return s } // dummy function for gettext
