--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/stopwords.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/stopwords.tmpl
@@ -6,6 +6,9 @@
 <!-- TMPL_IF NAME="delete_confirmed" -->Stop Word Deleted<!-- /TMPL_IF --> 
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <!-- TMPL_IF NAME="add_form" -->
         <script>
         //
