--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/z3950servers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/z3950servers.tmpl
@@ -3,6 +3,10 @@
 <!-- TMPL_IF NAME="delete_confirm" -->Confirm Deletion<!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="add_validate" -->z39.50 Server Added<!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="delete_confirmed" -->z39.50 Server Deleted<!-- /TMPL_IF --><!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <!-- TMPL_IF NAME="add_form" -->
         <script language="JavaScript" type="text/javascript">
         //
