--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/authorised_values.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/authorised_values.tmpl
@@ -1,4 +1,8 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- System Administration: <!-- TMPL_IF name="add_form" --><!-- TMPL_VAR name="action" --><!-- /TMPL_IF -->
+
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <!-- TMPL_IF name="delete_confirm" -->Confirm Deletion<!-- /TMPL_IF -->
 <!-- TMPL_IF name="else" -->Authorised values admin<!-- /TMPL_IF -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
