--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/authtypes.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/authtypes.tmpl
@@ -1,6 +1,9 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- System Administration<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <script language="javascript" type="text/javascript">
 function _(s) { return s } // dummy function for gettext
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////
