--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/branches.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/branches.tmpl
@@ -3,6 +3,10 @@
 <!-- TMPL_IF name="else" --><!-- TMPL_VAR name="head" --><!-- /TMPL_IF -->
 <!-- TMPL_IF name="delete_category" -->Confirm deletion of category<!-- /TMPL_IF -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <!-- TMPL_IF name="add" -->
 <h1><!-- TMPL_VAR name="head" --></h1>
 <form action="<!-- TMPL_VAR name="action" -->" name="Aform" method="post">
