--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/categorie.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/categorie.tmpl
@@ -6,7 +6,9 @@
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 
-	
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <!-- TMPL_IF NAME=add_form -->
 	<script language="JavaScript" type="text/javascript">
 	//
