--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/categoryitem.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/categoryitem.tmpl
@@ -1,5 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- <!-- TMPL_IF NAME="categorycode" -->Modify category<!-- TMPL_ELSE -->Add category<!-- /TMPL_IF --><!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
 
 <!-- TMPL_IF NAME="add_form" -->
         <script language="JavaScript" type="text/javascript">
