--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/charges.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/charges.tmpl
@@ -1,6 +1,9 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- System Administration: Fines
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <h2>Calculating Fines</h2>
 <p>Each box needs to be filled in with fine,time to start charging,charging cycle</p>
 <p>eg 1,7,7 = $1 fine, after 7 days, every 7 days</p>
