--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/checkmarc.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/checkmarc.tmpl
@@ -2,6 +2,9 @@
 <!-- TMPL_IF name="total" --><!-- TMPL_VAR name="total" --> errors found<!-- TMPL_ELSE -->Configuration OK!<!-- /TMPL_IF -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <h1>MARC Checks</h1>
 <table>
 	<tr>
