--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/koha2marclinks.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/koha2marclinks.tmpl
@@ -2,6 +2,10 @@
 <!-- TMPL_IF name="add_form" --><!-- TMPL_VAR name="action" --><!-- /TMPL_IF -->
 <!-- TMPL_IF name="else" -->MARC links <!-- TMPL_VAR name="tagfield" --><!-- /TMPL_IF -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <!-- TMPL_IF name="add_form" -->
 <!-- -->
 <h1><!-- TMPL_VAR name="action" --></h1>
