--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/printers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/printers.tmpl
@@ -5,6 +5,10 @@
 <!-- TMPL_IF NAME="delete_confirmed" -->Printer Deleted<!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="else" -->Printers<!-- /TMPL_IF -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <!-- TMPL_IF NAME=add_form -->
         <script language="JavaScript" type="text/javascript">
         //
