--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/systempreferences.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/systempreferences.tmpl
@@ -3,6 +3,9 @@
 <!-- TMPL_IF name="delete_confirm" -->Confirm Deletion of Parameter '<!-- TMPL_VAR name="searchfield" -->'<!-- /TMPL_IF --><!-- TMPL_IF name="delete_confirmed" -->Parameter Deleted<!-- /TMPL_IF --><!-- TMPL_IF name="else" -->Preferences<!-- /TMPL_IF -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <script language="JavaScript" type="text/javascript">
 		function _(s) { return s } // dummy function for gettext
 		//
