--- a/koha-tmpl/intranet-tmpl/prog/en/parameters/thesaurus.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/parameters/thesaurus.tmpl
@@ -1,6 +1,9 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- System Administration: Thesaurus Management
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 <!-- TMPL_IF name="detail_form" -->
 <table>
 	<caption>Thesaurus management</caption>
