fixing links from acqui.simple to cataloguing

--- a/koha-tmpl/intranet-tmpl/prog/en/intranet-main.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/intranet-main.tmpl
@@ -25,8 +25,8 @@
 	</li>	
 	<li>Cataloging
 <ul>
-			<li><a href="/cgi-bin/koha/acqui.simple/addbooks.pl">Cataloging</a></li>
-<li><a href="/cgi-bin/koha/acqui.simple/addbiblio.pl">Add Full MARC Record</a></li>
+			<li><a href="/cgi-bin/koha/cataloguing/addbooks.pl">Cataloging</a></li>
+			<li><a href="/cgi-bin/koha/cataloguing/addbiblio.pl">Add Full MARC Record</a></li>
 </ul></li>
 <li>Acquisitions<ul>
 <li><a href="/cgi-bin/koha/loadmodules.pl?module=acquisitions">Acquisitions</a></li><li><a href="/cgi-bin/koha/admin/aqbookfund.pl">Book funds</a></li>
