--- a/koha-tmpl/intranet-tmpl/prog/en/search.marc/search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/search.marc/search.tmpl
@@ -1,5 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Catalog: Advanced MARC Search<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
 <h1>Catalog Search</h1>
 <form name="f" method="post" action="search.pl">
 <input type="hidden" name="op" value="do_search" />
