Using 'loggedinusername' variable to populate hidden field user

--- a/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-add.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/subscription-add.tmpl
@@ -16,8 +16,8 @@
 <div id="serials_subscription_add_information">
 	<h2>Subscription information</h2>
 		<input type="hidden" name="op" value="addsubscription" />
-		<input type="hidden" name="user" value="<!-- TMPL_VAR name="user" -->" />
-		<p>Librarian <!-- TMPL_VAR name="user" --></p>
+		<input type="hidden" name="user" value="<!-- TMPL_VAR name="loggedinusername" -->" />
+		<p>Librarian <!-- TMPL_VAR name="loggedinusername" --></p>
 		<p><label>Supplier</label><input type="text" name="aqbooksellerid" value="<!-- TMPL_VAR name="aqbooksellerid" -->" size=4 /> (<input type="text" name="aqbooksellername" value="<!-- TMPL_VAR name="aqbooksellername" -->" disabled readonly />)<a href="#" onClick="FindAcqui(f)">...</a></p>
 		<p><label>Biblio</label><input type="text" name="biblionumber" value="<!-- TMPL_VAR name="biblionumber" -->" size=4 /> (<input type="text" name="title" value="<!-- TMPL_VAR name="bibliotitle" -->" disabled readonly />)<a href="#" onClick="Plugin(f)">...</a></p>
 		<p><label>Notes</label><textarea name="notes" cols="30" rows="2"><!-- TMPL_VAR name="notes" --></textarea></p>
