--- a/koha-tmpl/intranet-tmpl/prog/en/tools/export.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/export.tmpl
@@ -1,14 +1,28 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Cataloging: MARC Export<!-- TMPL_INCLUDE NAME="doc-head-close-addbiblio.inc" -->
+<!-- TMPL_INCLUDE NAME="parameters-top.inc" -->
 
-<h1>MARC Export</h1>
-<h4>Export in MARC format the following biblios:</h4>
-<form method="post">
-<p>From biblio number: <input type="text" name="start_bib" />
-to biblio number: <input type="text" name="end_bib" /></p>
-<p>(leave blank to export every biblio)</p>
-<input type="hidden" name="op" value="export" />
-<input type="submit" value="Export" />
-</form>
-<p>Note : the items are NOT exported by this tool</p>
-
-<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
+<div id="mainbloc">
+<h1>MARC biblio export</h1>
+	<div id="bloc25">
+		<h2 class="parameters">Select biblios to export</h2>
+		<form method="post">
+			<p>from biblio number : <input type="text" name="start_bib">
+			to biblio number : <input type="text" name="end_bib"></p>
+			<p>Document type : <!--TMPL_VAR Name="CGIitemtype"--></p>
+			<p>Branch :  <select name="branch">
+			<option value="">Default</option>
+                        <!-- TMPL_LOOP name="branchloop" -->
+                                <option value="<!-- TMPL_VAR name="value" -->" <!-- TMPL_IF name="selected" -->selected<!-- /TMPL_IF -->><!-- TMPL_VAR name
+="branchname" --></option>
+                        <!-- /TMPL_LOOP -->
+                        </select>
+</p>
+			<p>from itemcallnumber : <input type="text" name="start_callnumber">
+			to itemcallnumber : <input type="text" name="end_callnumber"></p>
+			<p>Limit to <input type="text" name="limit"> first biblio</p>
+			<p>Note : the items are NOT exported by this tool</p>
+			<input type="hidden" name="op" value="export">
+			<input type="submit" value="Export" class="button">
+		</form>
+	</div>
+</div>
+<!-- TMPL_INCLUDE NAME="parameters-bottom.inc" -->
