Bug fixing : Modifying template adapting for prog template format

--- a/koha-tmpl/intranet-tmpl/prog/en/tools/export.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/export.tmpl
@@ -1,7 +1,8 @@
-<!-- TMPL_INCLUDE NAME="parameters-top.inc" -->
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 
-<div id="mainbloc">
-<h1>MARC biblio export</h1>
+MARC biblio export
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
 	<div id="bloc25">
 		<h2 class="parameters">Select biblios to export</h2>
 		<form method="post">
@@ -25,4 +26,4 @@
 		</form>
 	</div>
 </div>
-<!-- TMPL_INCLUDE NAME="parameters-bottom.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
