--- a/koha-tmpl/intranet-tmpl/prog/en/reports/reports-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reports/reports-home.tmpl
@@ -39,9 +39,9 @@
 	</ul>
 	<p>on issues</p>
 	<ul>
-		<li><a href="/cgi-bin/koha/stats.pl?time=yesterday">Till Reconciliation:</a> Daily Report (yesterday)</li>
-		<li><a href="/cgi-bin/koha/stats.pl?time=today">Till Reconciliation:</a> Daily Report (today)</li>
-		<li><a href="/cgi-bin/koha/overdue.pl">Overdue items</a></li>
+		<li><a href="/cgi-bin/koha/reports/stats.pl?time=yesterday">Till Reconciliation:</a> Daily Report (yesterday)</li>
+		<li><a href="/cgi-bin/koha/reports/stats.pl?time=today">Till Reconciliation:</a> Daily Report (today)</li>
+		<li><a href="/cgi-bin/koha/reports/overdue.pl">Overdue items</a></li>
 		<li><a href="/cgi-bin/koha/reports/manager.pl?report_name=issues_by_borrower_category">Issues by borrower category</a></li>
 		<li><a href="/cgi-bin/koha/reports/issues_avg_stats.pl">Average loan time</a></li>
 	</ul>
