--- a/koha-tmpl/intranet-tmpl/prog/en/tools/letter.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/letter.tmpl
@@ -1,8 +1,11 @@
-<!-- TMPL_INCLUDE NAME="parameters-top.inc" -->
-<div id="mainbloc">
-	<h1>Letters admin</h1>
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
+	Letters admin
+<!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_INCLUDE NAME="menus.inc" -->
+<!-- TMPL_INCLUDE NAME="menu-admin.inc" -->
+
 	<!-- TMPL_IF NAME="else" -->
-		<form action="/cgi-bin/koha/admin/letter.pl" method="post">
+		<form action="/cgi-bin/koha/tools/letter.pl" method="post">
 		<input type="text" name="searchfield" value="">
 		<input type="submit" class="button" value="Filter"></form>
 		<!-- TMPL_IF NAME="search" -->
@@ -22,19 +25,19 @@
 				<td><!-- TMPL_VAR NAME="code" --></td>
 				<td><!-- TMPL_VAR NAME="name" --></td>
 				<td>
-					<a href="/cgi-bin/koha/admin/letter.pl?op=add_form&amp;module=<!-- TMPL_VAR name="module" -->&amp;code=<!-- TMPL_VAR NAME="code" -->">
+					<a href="/cgi-bin/koha/tools/letter.pl?op=add_form&amp;module=<!-- TMPL_VAR name="module" -->&amp;code=<!-- TMPL_VAR NAME="code" -->">
 						<img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/fileopen.png"  width="32" hspace="0" vspace="0" border="0">
 					</a>
 				</td>
 				<td>
-					<a href="/cgi-bin/koha/admin/letter.pl?op=delete_confirm&amp;module=<!-- TMPL_VAR name="module"-->&amp;code=<!-- TMPL_VAR NAME="code" -->">
+					<a href="/cgi-bin/koha/tools/letter.pl?op=delete_confirm&amp;module=<!-- TMPL_VAR name="module"-->&amp;code=<!-- TMPL_VAR NAME="code" -->">
 						<img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/edittrash.png" width="32" hspace="0" vspace="0" border="0">
 					</a>
 				</td>
 			</tr>
 		<!-- /TMPL_LOOP -->
 		</table>
-		<form action="/cgi-bin/koha/admin/letter.pl" method="post">
+		<form action="/cgi-bin/koha/tools/letter.pl" method="post">
 			<input type="hidden" name="op" value="add_form">
 			<br>
 			<input type="submit" class="button" value="Add Letter" title="Add Letter" alt="Add Letter">
@@ -140,7 +143,7 @@
 		<!-- TMPL_ELSE -->
 			<h2 class="parameters">Add letter</h2>
 		<!-- /TMPL_IF -->
-		<form action="/cgi-bin/koha/admin/letter.pl" name="Aform" method="post">
+		<form action="/cgi-bin/koha/tools/letter.pl" name="Aform" method="post">
 		<input type="hidden" name="op" value="add_validate">
 		<input type="hidden" name="checked" value="0">
 		<!-- TMPL_IF NAME="modify" -->
@@ -284,4 +287,4 @@
 	</form>
 	<!-- /TMPL_IF -->
 </div>
-<!-- TMPL_INCLUDE NAME="parameters-bottom.inc" -->
+<!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
