commit for holidays and news management.
Contrib from Tümer Garip (from Turkey) :
* holiday :
in /tools/ the holiday.pl script let you define holidays (days where the library is closed), branch by branch. You can define 3 types of holidays :
- single day : only this day is closed
- repet weekly (like "sunday") : the day is holiday every week
- repet yearly (like "July, 4") : this day is closed every year.

You can also put exception :
- sunday is holiday, but "2006 March, 5th" the library will be open

The holidays are used for return date calculation : the return date is set to the next date where the library is open. A systempreference (useDaysMode) set ON (Calendar) or OFF (Normal) the calendar calculation.

--- a/koha-tmpl/intranet-tmpl/prog/en/intranet-main.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/intranet-main.tmpl
@@ -70,5 +70,21 @@
 		<li><a href="/cgi-bin/koha/admin/systempreferences.pl">System Preferences</a></li><li><a href="/cgi-bin/koha/barcodes/barcodes.pl">Barcodes generator</a></li></ul></li>
 
 </ul>
-
+<div id="news">
+	<h1>News</h1>
+	<!-- TMPL_LOOP name="koha_news" -->
+			<table>
+				<tr>
+				<th>
+					<!-- TMPL_VAR NAME="title" --></th>
+					<td>
+					<!-- TMPL_VAR NAME="new" --> 
+					</td>
+				<td>
+						<!-- TMPL_VAR NAME="newdate" --> 
+					</td>
+				</tr>
+			</table>
+	<!-- /TMPL_LOOP -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
