--- a/koha-tmpl/intranet-tmpl/prog/en/admin/admin-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/admin-home.tmpl
@@ -102,6 +102,16 @@
 		<td>the barcode generator deals with generating barcodes for items you acquire
 		</td>
 	</tr>
+	
+	<tr>
+		<th><a href="/cgi-bin/koha/tools/holidays.pl">Holidays</a></th>
+		<td>Holidays (closed days for the library)
+		</td>
+	</tr>
+	<tr>
+		<th><a href="/cgi-bin/koha/tools/koha-news.pl">Basic news system</a></th>
+		<td>A basic news system to put news on OPAC or library staff</td>
+	</tr>
 </table>
 
 
