improvement: on the About page, a caption was added to the table of Perl modules and modules are now listed in alphabetic order.

--- a/koha-tmpl/intranet-tmpl/prog/en/about.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/about.tmpl
@@ -15,6 +15,7 @@
 </table>
 
 <table>
+        <caption>Perl modules</caption>
 	<!-- TMPL_LOOP name="components" -->
 	<tr>
 	  <th scope="row"><!-- TMPL_VAR NAME="name" --></th>
